--- a/app/css/_layout.scss
+++ b/app/css/_layout.scss
@@ -23,7 +23,7 @@ body {
     display:block;
     text-align:center;
     height:20px;
-    width:$flagWidth;
+    width:$width;
     overflow:hidden;
     margin-top:10px;
   }
