--- a/app/css/_variables.scss
+++ b/app/css/_variables.scss
@@ -9,7 +9,11 @@ $height:160px;
 $h2: $height/2;
 $h3: $height/3;
 $h4: $height/4;
+$h5: $height/5;
+$h6: $height/6;
 
 $w2: $width/2;
 $w3: $width/3;
 $w4: $width/4;
+$w5: $width/5;
+$w6: $width/6;
