--- a/app/css/_variables.scss
+++ b/app/css/_variables.scss
@@ -11,6 +11,8 @@ $h3: $height/3;
 $h4: $height/4;
 $h5: $height/5;
 $h6: $height/6;
+$h11: $height/11;
+$h13: $height/13;
 
 $w2: $width/2;
 $w3: $width/3;
